--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack --mode production",
     "dev": "cross-env NODE_ENV=development webpack --mode development",
-    "client": "webpack-dev-server --mode development --open"
+    "client": "webpack-dev-server --mode development --open",
+    "server": "nodemon index.js",
+    "start": "concurrently \"npm run client\" \"npm run server\" "
   },
   "repository": {
     "type": "git",
@@ -25,24 +27,35 @@
   },
   "homepage": "https://github.com/grisatkac/portfolio#readme",
   "browserslist": "> 0.25%, not dead",
+  "proxy": "http://localhost:3000",
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "concurrently": "^5.3.0",
     "cross-env": "^7.0.2",
     "css-loader": "^4.3.0",
     "eslint-loader": "^4.0.2",
     "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^0.12.0",
+    "nodemon": "^2.0.5",
     "style-loader": "^1.3.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.11.5"
+    "@babel/polyfill": "^7.11.5",
+    "express": "^4.17.1",
+    "http-proxy-middleware": "^1.0.6",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.9",
+    "postman": "^0.2.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.2.0"
   }
 }
