--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express": "^4.17.1",
     "http-proxy-middleware": "^1.0.6",
     "jsonwebtoken": "^8.5.1",
+    "materialize-css": "^1.0.0-rc.2",
     "mongoose": "^5.10.9",
     "postman": "^0.2.0",
     "react": "^16.14.0",
