--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "file-loader": "^6.1.0",
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^0.12.0",
+    "node-sass": "^5.0.0",
     "nodemon": "^2.0.5",
+    "sass-loader": "^11.0.1",
     "style-loader": "^1.3.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
@@ -62,6 +64,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "ws": "^7.4.3"
   }
 }
