--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "mini-css-extract-plugin": "^0.12.0",
     "node-sass": "^5.0.0",
     "nodemon": "^2.0.5",
-    "sass-loader": "^11.0.1",
     "style-loader": "^1.3.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
@@ -56,6 +55,7 @@
     "jsonwebtoken": "^8.5.1",
     "materialize-css": "^1.0.0-rc.2",
     "mongoose": "^5.10.9",
+    "normalize.css": "^8.0.1",
     "postman": "^0.2.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
@@ -65,6 +65,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
+    "sass-loader": "^10.1.1",
     "ws": "^7.4.3"
   }
 }
